# xtor

./: .clangd  CMakeLists.txt
include/: ELFLoader.hpp  IR.hpp  X2R_IR.hpp  X86Lifter.hpp  disasm.hpp
programs/: test.c  test_riscv.S  test_x86.S
scripts/: build.sh
src/: ELFLoader.cpp  IR.cpp  IRLift.cpp  X86Lifter.cpp  disasm.cpp  main.cpp
testfiles/: test  test.c
utils/: utils.hpp
